--- a/code/habits/habits.css
+++ b/code/habits/habits.css
@@ -98,19 +98,21 @@ body {
     margin: 0 auto;
   }
 
-    /* #navbar {
-    position: absolute; 
-    bottom: 0;
-    width: 100%; 
-    background-color: #1a1c1f;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-top: 1px solid #1a1c1f;
-    padding: 40px 0;
-    box-sizing: border-box;
-    overflow-y: auto;
-  } */
+#navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 400px;
+  margin: 0 auto;           /* center it horizontally */
+  padding: 20px 0;
+  background-color: #1a1c1f;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-top: 1px solid #1a1c1f;
+  box-sizing: border-box;
+}
   
 /*   
   .button-container {
